<resources>
    <string name="app_name">crash</string>
    <string name="Ok" translatable="false">OK</string>
    <string name="hello">Hello!</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="paswword" translatable="false">Password</string>
    <string name="name1" translatable="false">Имя</string>
    <string name="name2" translatable="false">Фамилия</string>
    <string name="name3" translatable="false">Отчество</string>
    <string name="done" translatable="false">Готово</string>
    <string name="Hint_0" translatable="false">Выберите фигуру,которая вам не понадобиться из пулла</string>
    <string name="Hint_1" translatable="false">Привет.Впереди обучение механикам игры.</string>
    <string name="Hint_2" translatable="false">Перетащи фигуру на поле</string>
    <string name="Hint_3" translatable="false">Чтобы перевернуть фигуру нажми на нее</string>
    <string name="Hint_4" translatable="false">Фигуру можно положить в рюкзак.</string>
    <string name="Hint_5" translatable="false">Фигуру можно удалить.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>