<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Menu"
    tools:context=".SigInUp.SignInUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/boy1" />

        <Button
            android:id="@+id/btavatar"
            android:layout_width="212dp"
            android:layout_height="43dp"
            android:onClick="onClickAvatar"
            android:text="@string/avatar"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/paswword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name1"
            android:inputType="textPersonName"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name2"
            android:inputType="textPersonName"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name3"
            android:inputType="textPersonName"
            android:visibility="visible" />

        <Button
            android:id="@+id/btdone"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:onClick="onClickDone"
            android:text="@string/done" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>